<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- MatchListActivity -->
	<string name="match_list_activity_title">List of Matches</string>
	<string name="new_match">New Match</string>
	<string name="list_footer">More</string>
	<!-- Options menu -->
	<string name="remove_all_matches">Delete All</string>
	<!--  Context menu -->
	<string name="remove_match">Delete</string>
	<!-- Delete match confirmation dialog -->
	<string name="match_delete_conformation">Match will be deleted</string>
	<!-- Delete all matches confirmation dialog -->
	<string name="match_delete_all_conformation">All matches will be deleted</string>
	<!-- Not enough players dialog -->
	<string name="not_enough_players">In order to add a new match you need to have at least 4 players defined. Select \'List of Players\' from the options menu and add more players.</string>
	<!--  Help dialog -->
	<string name="match_list_activity_help_message">Add a new match by pressing \'New Match\' button on top of the screen or by selecting \'New Match\' from the options menu. Latest match will be shown at the top of the list.\n\nPress match in a list in order to get match details.\n\nDelete single match by long pressing it or delete all matches by selecting \'Delete All\' from the options menu.\n\nTo manage players select \'List of Players\' from the options menu.</string>

	<!-- PlayerListActivity -->
	<string name="player_list_activity_title">List of Players</string>
	<string name="winning_rate">Sets winning rate</string>
	<!-- Options menu -->
	<string name="new_player">New Player</string>
	<string name="remove_all_players">Delete All</string>
	<!-- Context menu -->
	<string name="edit_player">Edit</string>
	<string name="remove_player">Delete</string>
	<!-- Delete player confirmation dialog -->
	<string name="player_delete_conformation">Player will be deleted</string>
	<!-- Delete all players confirmation dialog -->
	<string name="player_delete_all_conformation">All players will be deleted</string>
	<!-- New player dialog -->
	<string name="enter_player_name">Enter player name</string>
	<!-- Edit player dialog -->
	<string name="edit_player_name">Edit player name</string>
	<!--  Help dialog -->
	<string name="player_list_activity_help_message">Add a new player by pressing \'New Player\' button on top of the screen or by selecting \'New Player\' from the options menu. Player name must be unique. Players are sorted alphabetically. There is a statistical data for each player in the list which shows how many he has played and how many has he won.\n\nDelete single player by long pressing it or delete all players by selecting \'Delete All\' from the options menu.\n\nWARNING\nYou should only delete players that aren\'t connected to any match otherwise match will not be able to retrieve connection to that player.</string>

	<!-- MatchActivity -->
	<string name="match_activity_title">Match</string>
	<string name="game_result">Total</string>
	<string name="difference">Difference</string>
	<!--  Help dialog -->
	<string name="match_activity_help_message">Top of the screen shows sides and current sets result.\n\nAdd a new game by pressing \'New Game\' button on top of the screen or by selecting \'New Game\' from the options menu. The latest game will be shown at the bottom of the list.\n\nAt the bottom of the screen there\'s a number of total game points in current set along with the difference between sides.\n\nEdit or Delete game by long pressing it.\n\nTo see list of sets in current match select \'List of Sets\' from the options menu.\n\nTo see match statistics select \'Match Statistics\' from the options menu.</string>

	<!-- Global -->
	<string name="app_name">BelaMiVi</string>
	<string name="team1">Team 1</string>
	<string name="team2">Team 2</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="help">Help</string>
	<string name="warning">Warning</string>
	<string name="close">Close</string>

	<!-- GameActivity -->
	<string name="game_activity_title">List of Games</string>
	<!--  Help dialog -->
	<string name="game_activity_help_message">Displays list of games chronologically. It\'s possible to edit or delete game by long pressing it but only if this is the last set in a match.</string>

	<!-- GameList -->
	<string name="new_game">New Game</string>
	<string name="new_edit_game">Edit Game</string>
	<string name="edit_game">Edit</string>
	<!-- Delete game confirmation dialog -->
	<string name="remove_game">Delete</string>
	<string name="game_delete_conformation">Game will be deleted</string>

	<!-- SetListActivity -->
	<string name="set_list_activity_title">List of Sets</string>
	<!--  Help dialog -->
	<string name="set_list_activity_help_message">Displays list of sets chronologically in a current match. Press desired set to see a list of games in that particular set.</string>

	<!-- NewMatchActivity -->
	<string name="new_match_activity_title">New Match</string>
	<string name="creation_date">Creation Date</string>
	<string name="team1_players">Team 1 Players</string>
	<string name="team2_players">Team 2 Players</string>
	<string name="set_limit">Set Limit</string>
	<string name="players">Players</string>
	<!--  Help dialog -->
	<string name="new_match_activity_help_message">Select Team 1 and Team 2 players. Players must vary in order to create a match.\n\nTo change set limit for current match edit \'Set Limit\' value.</string>

	<!-- NewGameActivity -->
	<string name="new_game_activity_title">New Game</string>
	<string name="game_points">Game Points</string>
	<string name="declaration_team">Declaration Team</string>
	<string name="declarations">Declarations</string>
	<string name="points">Points</string>
	<string name="all_tricks">All Tricks</string>
	<string name="bela">Belote</string>
	<!--  Help dialog -->
	<string name="new_game_activity_help_message">In a game where game points vary from default value, there were either declarations or all tricks.\n\nTo set declarations select side by pressing declaration team radio button. With +20 and +50 buttons enter declarations value. If opposite team declared Belote, press \'Belote\' check box. Switching between declaration teams will reset game points to default.\n\nIf game ended with all tricks owned by one team, press \'All Tricks\' check box.\n\nEnter team points only for one side, other will be calculated automatically based on game points. Take into account that declarations are not added to team points automatically.</string>

	<!-- StatisticsActivity -->
	<string name="statistics_activity_title">Match Statistics</string>
	<string name="chosen_trump">Chosen Trump</string>
	<string name="winnings">Passed Games</string>
	<string name="sets">Sets</string>
	<!--  Help dialog -->
	<string name="statistics_activity_help_message">Chosen Trump\nIt\'s a rate between total number of games and number of games in which certain side chose trump.\n\nPassed Games\nIt\'s a rate between number of times that certain trump was chosen and games in which sufficient number of points was obtained.</string>
	
	<!-- SettingsActivity -->
	<string name="settings_activity_title">Settings</string>
	<string name="equal_points">Equal amount of points</string>
	<string name="equal_points_summary">Allow both sides to have equal amount of points in a game</string>
	<string name="misc">Miscellaneous</string>
	<string name="matches_in_list">Number of matches in the list</string>
	
	<!-- AboutDialog -->
	<string name="about">About</string>
	<string name="version">Version</string>
	<string name="author">© Damir Mihaljinec 2011. - 2013. </string>
	<string name="web">http://code.google.com/p/bela-mi-vi/</string>
</resources>