<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	>
	<item
		android:id="@+id/list_of_players"
		android:title="@string/player_list_activity_title"
		android:icon="@drawable/ic_menu_friendslist"
		/>
	<item
		android:id="@+id/new_match"
		android:title="@string/new_match_activity_title"
		android:icon="@drawable/ic_menu_add"
		/>
	<item
		android:id="@+id/remove_all_matches"
		android:title="@string/remove_all_matches"
		android:icon="@drawable/ic_menu_delete"
		/>
	<item
		android:id="@+id/help"
		android:title="@string/help"
		android:icon="@drawable/ic_menu_help"
		/>
	<item
		android:id="@+id/settings"
		android:title="@string/settings_activity_title"
		android:icon="@drawable/ic_menu_preferences"
		/>
	<item
		android:id="@+id/about"
		android:title="@string/about"
		android:icon="@drawable/ic_menu_info_details"
		/>
</menu>