<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="5dp"
		>
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_launcher_belamivi"
			android:scaleType="center"
			android:layout_gravity="center_vertical"
			/>
		<TextView
			android:padding="5dp"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/app_name"
			android:layout_gravity="center_vertical"
			/>
	</LinearLayout>
	<View
		android:background="@android:drawable/divider_horizontal_dim_dark"
		android:layout_width="fill_parent"
		android:layout_height="1dp"
		/>
	<TextView
		android:id="@+id/version"
		android:padding="5dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>
	<TextView
		android:padding="5dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/author"
		/>
	<TextView
		android:id="@+id/web"
		android:padding="5dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/web"
		/>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		style="@android:style/ButtonBar"
		android:layout_alignParentBottom="true"
		>
		<Button
			android:id="@+id/close"
			android:layout_weight="1"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:text="@string/close"
			/>
	</LinearLayout>
</LinearLayout>