<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	>
	<LinearLayout
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:layout_width="0px"
		android:layout_height="0px"
		/>
	<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/scroller"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:fillViewport="true"
		android:layout_alignParentTop="true"
		android:layout_above="@id/bottom_control_bar"
		>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="2dip"
				android:paddingBottom="2dip"
				android:paddingLeft="5dip"
				android:text="@string/creation_date"
				style="?android:attr/listSeparatorTextViewStyle"
				/>
			<TextView
				android:id="@+id/date"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="6dip"
				android:layout_marginTop="6dip"
				android:textAppearance="?android:attr/textAppearanceLarge"
				/> 
			<TextView
				android:id="@+id/time"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingBottom="2dip"
				android:layout_marginLeft="6dip"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="@color/list_blue"
				/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="6dip"
				android:paddingBottom="2dip"
				android:paddingLeft="5dip"
				android:text="@string/team1_players"
				style="?android:attr/listSeparatorTextViewStyle"
				/>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="6dip"
				android:paddingBottom="6dip"
				android:orientation="horizontal"
				>
				<Spinner 
					android:id="@+id/team1_player1"
					android:layout_weight="1"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:prompt="@string/players"
					/>
				<Spinner 
					android:id="@+id/team1_player2"
					android:layout_weight="1"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:prompt="@string/players"
					/>
			</LinearLayout>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="6dip"
				android:paddingBottom="2dip"
				android:paddingLeft="5dip"
				android:text="@string/team2_players"
				style="?android:attr/listSeparatorTextViewStyle"
				/>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="6dip"
				android:paddingBottom="6dip"
				android:orientation="horizontal"
				>
				<Spinner 
					android:id="@+id/team2_player1"
					android:layout_weight="1"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:prompt="@string/players"
					/>
				<Spinner 
					android:id="@+id/team2_player2"
					android:layout_weight="1"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:prompt="@string/players"
					/>
			</LinearLayout>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="6dip"
				android:paddingBottom="2dip"
				android:paddingLeft="5dip"
				android:text="@string/set_limit"
				style="?android:attr/listSeparatorTextViewStyle"
				/>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="10dip"
				android:paddingBottom="10dip"
				android:orientation="vertical"
				>
				<EditText
					android:id="@+id/limit"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:singleLine="true"
					android:inputType="number"
					/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
	<LinearLayout
		android:id="@+id/bottom_control_bar"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal"
		style="@android:style/ButtonBar"
		>
		<Button
			android:id="@+id/ok"
			android:layout_weight="1"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:enabled="false"
			android:text="@string/ok"
			/>
		<Button
			android:id="@+id/cancel"
			android:layout_weight="1"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:text="@string/cancel"
			/>
	</LinearLayout>
</RelativeLayout>