<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scroller"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true"
	>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		>
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
			<TextView
			    android:id="@+id/team1"
			    android:layout_weight="1"
				android:layout_width="0dip"
			    android:layout_height="wrap_content"
			    android:paddingTop="2dip"
			    android:paddingBottom="2dip"
			    android:paddingLeft="5dip"
			    android:gravity="left"
			    android:text="@string/team1"
			    style="?android:attr/listSeparatorTextViewStyle"
			    />
			<TextView
			    android:id="@+id/team2"
			    android:layout_weight="1"
				android:layout_width="0dip"
			    android:layout_height="wrap_content"
			    android:paddingTop="2dip"
			    android:paddingBottom="2dip"
			    android:paddingRight="5dip"
			    android:gravity="right"
			    android:text="@string/team2"
			    style="?android:attr/listSeparatorTextViewStyle"
			    />
		</LinearLayout>
		<TableLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
			<TableRow>
				<TextView
				    android:id="@+id/team1_sets"
				    android:layout_weight="1"
					android:layout_width="0dip"
				    android:layout_height="wrap_content"
				    android:paddingTop="2dip"
				    android:paddingBottom="2dip"
				    android:paddingLeft="5dip"
				    android:gravity="left"
				    android:textColor="@color/android:white"
				    />
				<TextView
				    android:layout_weight="1"
					android:layout_width="0dip"
				    android:layout_height="wrap_content"
				    android:paddingTop="2dip"
				    android:paddingBottom="2dip"
				    android:gravity="center"
				    android:text="@string/sets"
				    android:textColor="@color/list_blue"
				    />
				<TextView
					android:id="@+id/team2_sets"
					android:layout_weight="1"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:paddingTop="2dip"
					android:paddingBottom="2dip"
					android:paddingRight="5dip"
					android:gravity="right"
					android:textColor="@color/android:white"
					/>
			</TableRow>
			<TableRow
				android:background="@color/dark_gray"
				>
				<TextView
				    android:id="@+id/team1_points"
				    android:layout_weight="1"
					android:layout_width="0dip"
				    android:layout_height="wrap_content"
				    android:paddingTop="2dip"
				    android:paddingBottom="2dip"
				    android:paddingLeft="5dip"
				    android:gravity="left"
				    android:textColor="@color/android:white"
				    />
				<TextView
				    android:layout_weight="1"
					android:layout_width="0dip"
				    android:layout_height="wrap_content"
				    android:paddingTop="2dip"
				    android:paddingBottom="2dip"
				    android:gravity="center"
				    android:text="@string/points"
				    android:textColor="@color/list_blue"
				    />
				<TextView
					android:id="@+id/team2_points"
					android:layout_weight="1"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:paddingTop="2dip"
					android:paddingBottom="2dip"
					android:paddingRight="5dip"
					android:gravity="right"
					android:textColor="@color/android:white"
					/>
			</TableRow>
			<TableRow>
				<TextView
				    android:id="@+id/team1_declarations"
				    android:layout_weight="1"
					android:layout_width="0dip"
				    android:layout_height="wrap_content"
				    android:paddingTop="2dip"
				    android:paddingBottom="2dip"
				    android:paddingLeft="5dip"
				    android:gravity="left"
				    android:textColor="@color/android:white"
				    />
				<TextView
				    android:layout_weight="1"
					android:layout_width="0dip"
				    android:layout_height="wrap_content"
				    android:paddingTop="2dip"
				    android:paddingBottom="2dip"
				    android:gravity="center"
				    android:text="@string/declarations"
				    android:textColor="@color/list_blue"
				    />
				<TextView
					android:id="@+id/team2_declarations"
					android:layout_weight="1"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:paddingTop="2dip"
					android:paddingBottom="2dip"
					android:paddingRight="5dip"
					android:gravity="right"
					android:textColor="@color/android:white"
					/>
			</TableRow>
			<TableRow
				android:background="@color/dark_gray"
				>
				<TextView
				    android:id="@+id/team1_all_tricks"
				    android:layout_weight="1"
					android:layout_width="0dip"
				    android:layout_height="wrap_content"
				    android:paddingTop="2dip"
				    android:paddingBottom="2dip"
				    android:paddingLeft="5dip"
				    android:gravity="left"
				    android:textColor="@color/android:white"
				    />
				<TextView
				    android:layout_weight="1"
					android:layout_width="0dip"
				    android:layout_height="wrap_content"
				    android:paddingTop="2dip"
				    android:paddingBottom="2dip"
				    android:gravity="center"
				    android:text="@string/all_tricks"
				    android:textColor="@color/list_blue"
				    />
				<TextView
					android:id="@+id/team2_all_tricks"
					android:layout_weight="1"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:paddingTop="2dip"
					android:paddingBottom="2dip"
					android:paddingRight="5dip"
					android:gravity="right"
					android:textColor="@color/android:white"
					/>
			</TableRow>
			<TableRow>
				<TextView
				    android:id="@+id/team1_chosen_trump"
				    android:layout_weight="1"
					android:layout_width="0dip"
				    android:layout_height="wrap_content"
				    android:paddingTop="2dip"
				    android:paddingBottom="2dip"
				    android:paddingLeft="5dip"
				    android:gravity="left"
				    android:textColor="@color/android:white"
				    />
				<TextView
				    android:layout_weight="1"
					android:layout_width="0dip"
				    android:layout_height="wrap_content"
				    android:paddingTop="2dip"
				    android:paddingBottom="2dip"
				    android:gravity="center"
				    android:text="@string/chosen_trump"
				    android:textColor="@color/list_blue"
				    />
				<TextView
					android:id="@+id/team2_chosen_trump"
					android:layout_weight="1"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:paddingTop="2dip"
					android:paddingBottom="2dip"
					android:paddingRight="5dip"
					android:gravity="right"
					android:textColor="@color/android:white"
					/>
			</TableRow>
			<TableRow
				android:background="@color/dark_gray"
				>
				<TextView
				    android:id="@+id/team1_passed_games"
				    android:layout_weight="1"
					android:layout_width="0dip"
				    android:layout_height="wrap_content"
				    android:paddingTop="2dip"
				    android:paddingBottom="2dip"
				    android:paddingLeft="5dip"
				    android:gravity="left"
				    android:textColor="@color/android:white"
				    />
				<TextView
				    android:layout_weight="1"
					android:layout_width="0dip"
				    android:layout_height="wrap_content"
				    android:paddingTop="2dip"
				    android:paddingBottom="2dip"
				    android:gravity="center"
				    android:text="@string/winnings"
				    android:textColor="@color/list_blue"
				    />
				<TextView
					android:id="@+id/team2_passed_games"
					android:layout_weight="1"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:paddingTop="2dip"
					android:paddingBottom="2dip"
					android:paddingRight="5dip"
					android:gravity="right"
					android:textColor="@color/android:white"
					/>
			</TableRow>
		</TableLayout>
	</LinearLayout>
</ScrollView>
