<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	>
	<LinearLayout
		android:id="@+id/set_list"
		android:layout_alignParentTop="true"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<TextView
		    android:id="@+id/team1"
		    android:layout_weight="1"
			android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:paddingTop="2dip"
		    android:paddingBottom="2dip"
		    android:paddingLeft="5dip"
		    android:gravity="left"
		    android:text="@string/team1"
		    style="?android:attr/listSeparatorTextViewStyle"
		    />
		<TextView
		    android:id="@+id/score"
		    android:layout_weight="1"
			android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:paddingTop="2dip"
		    android:paddingBottom="2dip"
		    android:gravity="center"
		    style="?android:attr/listSeparatorTextViewStyle"
		    />
		<TextView
		    android:id="@+id/team2"
		    android:layout_weight="1"
			android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:paddingTop="2dip"
		    android:paddingBottom="2dip"
		    android:paddingRight="5dip"
		    android:gravity="right"
		    android:text="@string/team2"
		    style="?android:attr/listSeparatorTextViewStyle"
		    />
	</LinearLayout>
	<!--
	<ListView
		android:id="@+id/set_list"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		/>
	<TextView 
		android:id="@+id/sets_result"
	 	android:layout_width="fill_parent"
	 	android:layout_height="wrap_content"
	 	android:textAppearance="?android:attr/textAppearanceLarge"
	 	android:gravity="center"
	 	android:layout_alignParentTop="true"
		/>
	-->
	<LinearLayout
		android:id="@+id/game_score"
		android:layout_alignParentBottom="true"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<TextView
			xmlns:android="http://schemas.android.com/apk/res/android"
		    android:id="@+id/game_result"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="2dip"
		    android:paddingBottom="2dip"
		    android:paddingLeft="5dip"
		    android:text="@string/game_result"
		    style="?android:attr/listSeparatorTextViewStyle"
		    />
		<TextView 
			android:id="@+id/set_score"
		 	android:layout_width="fill_parent"
		 	android:layout_height="wrap_content"
		 	android:textAppearance="?android:attr/textAppearanceLarge"
		 	android:gravity="center"
			/>
		<TextView
			android:id="@+id/difference"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="2dip"
			android:layout_marginLeft="6dip"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textColor="@color/list_blue"
			/>
	</LinearLayout>
	<ListView
		android:id="@+id/game_list"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/set_list"
		android:layout_above="@id/game_score"
		/>
</RelativeLayout>